--- a/app/src/main/res/layout/activity_list_view.xml
+++ b/app/src/main/res/layout/activity_list_view.xml
@@ -13,8 +13,9 @@
 
     <TextView
         android:id="@+id/text_view_show_select"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/eight_dp"
         android:text="MenuDemo"/>
 
     <!--android:id="@id/android:list"-->
@@ -24,5 +25,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/eight_dp"/>
+
+    <Button
+        android:id="@+id/btn_next"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/forty_eight_dp"
+        android:layout_marginTop="@dimen/eight_dp"
+        android:text="Next"
+        android:textAlignment="center"/>
 
 </LinearLayout>
